# content-moderation-api

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  check.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  exceptions.py  logging.py
app/middleware/: rate_limiter.py  request_logger.py
app/schemas/: health.py  moderation.py
app/services/: injection_detector.py  llm_client.py  moderation_service.py  output_validator.py
eval/: dataset.jsonl  eval_failures_anthropic_claude-sonnet-4.6.json  eval_failures_deepseek_deepseek-v3.2.json  eval_failures_openai_gpt-4o-mini.json  script.py
prompts/: moderation_v1.txt
tests/: conftest.py  test_config.py  test_exception.py  test_health.py  test_llm_client.py  test_logging.py  test_middleware.py  test_moderation.py  test_output_validator.py  test_rate_limiter.py  test_schemas.py
